--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,9 @@
 
+{
+  "name": "CA Pulse",
+  "short_name": "CAPulse",
+  "start_url": ".",
+  "display": "standalone",
+  "background_color": "#0f172a",
+  "theme_color": "#0f172a"
+}
